--- a/rest_api/src/main/resources/static/login.html
+++ b/rest_api/src/main/resources/static/login.html
@@ -24,21 +24,15 @@
 
     <main role="main" class="container">
         <!-- Intro -->
-        <div class="row">
-            <div class="text-center col-md-6"> 
+        <div class="row justify-content-center">
+            <div class="text-center col-md-12"> 
                 <img src="assets/img/cloudit_logo.png">
             </div>
-            <div class="text-center col-md-6"> 
+            <div class="text-center col-md-12"> 
                 <h2>Welcome to CloudIT!</h2>
-                <p>Aut eligendi autem ea. Qui nisi inventore dolores commodi id. Fugiat tempore perferendis qui. Non ratione excepturi eius. Perferendis minima aliquid veritatis distinctio ut quidem saepe. Iste quod accusantium facilis libero eos esse. Ut sit recusandae exercitationem est aut at. Eveniet ad sit tempore debitis amet culpa tenetur. Maiores culpa incidunt possimus voluptas magni numquam reprehenderit perspiciatis. Minus dolorum a voluptatibus. Quasi et rerum qui dolores dolore dolor ut.</p>
-
             </div>
         </div>
-        <div class="row" style="margin-top: 30px">
-            <div class="text-center col-md-6"> 
-                <h3>Our Intent</h3>
-                <p>Aut eligendi autem ea. Qui nisi inventore dolores commodi id. Fugiat tempore perferendis qui. Non ratione excepturi eius. Perferendis minima aliquid veritatis distinctio ut quidem saepe. Iste quod accusantium facilis libero eos esse. Ut sit recusandae exercitationem est aut at. Eveniet ad sit tempore debitis amet culpa tenetur. Maiores culpa incidunt possimus voluptas magni numquam reprehenderit perspiciatis. Minus dolorum a voluptatibus. Quasi et rerum qui dolores dolore dolor ut.</p>
-            </div>
+        <div class="row justify-content-center" style="margin-top: 30px">
             <div class="text-center col-md-6"> 
                 <ul class="nav nav-tabs" style="margin-bottom: 10px" id="teste">
                     <li class="nav-item"><a id="sign_in_link" class="nav-link active" href="#" onclick="sign_in_tab()">Sign In</a></li>
@@ -54,8 +48,12 @@
                         <label for="pwd">Password:</label>
                         <input type="password" class="form-control" id="pwd">
                     </div>
-                    <button style="width: 100%; background-color: #3793f7; border: 0px; color: white; font-size: 20px;" type="button" class="btn btn-secondary" onclick="sign_in()" id="submit_button">Sign In</button>
-                 </form>
+                    <div class="row justify-content-center">
+                        <div class="col-md-6">
+                            <button style="width: 100%; background-color: #3793f7; border: 0px; color: white; font-size: 20px;" type="button" class="btn btn-secondary" onclick="sign_in()" id="submit_button">Sign In</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </main>
