--- a/rest_api/src/main/resources/static/welcome.html
+++ b/rest_api/src/main/resources/static/welcome.html
@@ -24,9 +24,21 @@
     <!-- Navbar -->
     <div id="navBarID"></div>
 
-    <div role="main" class="container">
+    <div role="main" class="container" style="margin-top: 30px;">
         <h1 id="welcome_title"></h1>
-    </div><!-- /.container -->
+        <div class="" id="favouritsDiv">
+            <h3>Favourite Posts</h3>
+            <div>
+
+            </div>
+        </div>
+        <div class="" id="favouritsDiv">
+            <h3>History</h3>
+            <div>
+                
+            </div>
+        </div>
+    </div>
 
 
     <!-- Footer -->
