--- a/rest_api/src/main/resources/static/messageCenter.html
+++ b/rest_api/src/main/resources/static/messageCenter.html
@@ -42,7 +42,6 @@
                             <i class="fa fa-times"></i>
                         </a>
                     </li>
-                    
                 </ul>
             </div>
 
@@ -50,11 +49,11 @@
             <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 " style="padding:0; height:92vh;min-height: 100px" id="chat-room-msg-center">
                 <div class="chat-room-head">
                     <h3 id="msgDestinName">Joao</h3>
-                    <h5 id="msgDestination">joao</h5>
+                    <h5 id="msgDestination">fp</h5>
                 </div>
                 <div class="chat-room-body" id="class-room-msgs" data-bind="foreach: { data: messages, as: 'msg' }">
                     <div class="group-rom">
-                        <div class="second-part odd" data-bind="text: msg.message"></div>
+                        <div class="second-part odd" data-bind="html: formatMessage(msg.message)"></div>
                         <div class="third-part" data-bind="text: msg.date"></div>
                     </div>
                 </div>
@@ -63,7 +62,11 @@
                         <div class="chat-txt col-lg-10 col-md-9 col-sm-7">
                             <input id="msgText" type="text" class="form-control">
                         </div>
-                        <div class="btn-group row col-lg-2 col-md-2 col-sm-1">
+                        <div class="btn-group row col-lg-2 col-md-2 col-sm-2 dropup">
+                            <button class="btn btn-secondary dropbtn" style="width:25px;"><b>+ </b></button>
+                            <div class="dropup-content" data-bind="foreach: { data: myOffers, as: 'o'}">
+                                <p data-bind="text: o.title, click: function() {sendMsgWithOffer(o)}"></p>
+                            </div>
                             <button class="btn btn-primary" data-original-title="send" title="send" onclick="sendMsg()">Send</button>
                         </div>
                     </div>
