Continuing the development od message center

--- a/rest_api/src/main/resources/static/jobs.html
+++ b/rest_api/src/main/resources/static/jobs.html
@@ -169,7 +169,7 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" onClick="enableEdit_orSave()" id="edit_save_btn">Edit</button>
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="contact_btn">Contact</button>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="contact_btn" onclick="contact()">Contact</button>
                                 </div>
                             </div>
                         </div>
