On contact click go to message center. Added acceptance support.

--- a/rest_api/src/main/resources/static/profile.html
+++ b/rest_api/src/main/resources/static/profile.html
@@ -79,11 +79,13 @@
                     <div class="col-md-6">
                     </div>
                     <div class="col-md-6">
-                        <div class="col-md-6">
-                            <button type="button" id="clear_btn" class="btn btn-secondary clear-btn">Clear</button>
-                        </div>
-                        <div class="col-md-6">
-                            <button type="button" id="update_btn" class="btn btn-secondary update-btn">Update</button>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <button type="button" id="clear_btn" class="btn btn-secondary clear-btn">Clear</button>
+                            </div>
+                            <div class="col-md-6">
+                                <button type="button" id="update_btn" class="btn btn-secondary update-btn">Update</button>
+                            </div>
                         </div>
                     </div>
                 </div>
