--- a/rest_api/src/main/resources/static/messageCenter.html
+++ b/rest_api/src/main/resources/static/messageCenter.html
@@ -67,7 +67,7 @@
                             <input id="msgText" type="text" class="form-control">
                         </div>
                         <div class="btn-group row col-lg-2 col-md-2 col-sm-2 dropup">
-                            <button class="btn btn-secondary dropbtn" style="width:25px;"><b>+ </b></button>
+                            <button class="btn btn-secondary dropbtn" style="width:25px;">+</button>
                             <div class="dropup-content" data-bind="foreach: { data: myOffers, as: 'o'}">
                                 <p data-bind="text: o.title, click: function() {sendMsgWithOffer(o)}"></p>
                             </div>
