Feature now working.

--- a/rest_api/src/main/resources/static/search.html
+++ b/rest_api/src/main/resources/static/search.html
@@ -322,6 +322,7 @@
                                                 <img src="assets/img/blog.jpg" alt="" class="img-responsive img-thumbnail">
                                             </div>
                                             <div class="col-md-8" style="font-size: 16px; margin-top: 10px">
+                                                <p style="display: none;" id="offerModalId"></p>
                                                 <div class="row">
                                                     <div class="col-md-3"><p>Description:</p></div>
                                                     <div class="col-md-9"><p id="offerModalDescription"></p></div>
@@ -363,7 +364,7 @@
                                     </div>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal" id="contact_btn">Contact</button>
+                                    <button type="button" class="btn btn-default" data-dismiss="modal" id="interest_btn" onclick="showInterest()">Show Interest</button>
                                 </div>
                             </div>
                         </div>
