started the websocket testing

--- a/rest_api/src/main/resources/static/welcome.html
+++ b/rest_api/src/main/resources/static/welcome.html
@@ -24,7 +24,7 @@
     <!-- Navbar -->
     <div id="navBarID"></div>
 
-    <div role="main" class="container" style="margin-top: 30px;">
+    <div role="main" class="container" style="min-height: 70vh;margin-top: 30px;">
         <h1 id="welcome_title"></h1>
         <div class="" id="favouritsDiv">
             <h3>Favourite Posts</h3>
