--- a/rest_api/src/main/resources/static/messageCenter.html
+++ b/rest_api/src/main/resources/static/messageCenter.html
@@ -38,7 +38,7 @@
                     <li>
                         <a data-bind="click: function(){loadMessages(contact)}">
                             <i class="fa fa-user"></i>
-                            <span data-bind="text: contact[0]"></span>
+                            <span data-bind="text: contact[0], attr: {id: contact[0]}"></span>
                         </a>
                     </li>
                 </ul>
