--- a/rest_api/src/main/resources/static/search.html
+++ b/rest_api/src/main/resources/static/search.html
@@ -222,7 +222,7 @@
                         <div class="blog-box clearfix row userSearchResult"
                              data-toggle="modal"
                              data-target="#userModal"
-                             data-bind="click: function(){fillSearchUserModalTable(user)}"
+                             data-bind="click: function(){fillSearchUserModalTable(user)}, attr: {id: user.username}"
                         >
                             <!-- Box -->
                             <div class="media-box col-md-4">
