--- a/rest_api/src/main/resources/static/search.html
+++ b/rest_api/src/main/resources/static/search.html
@@ -143,7 +143,7 @@
                 <div data-bind="if: searchBy() == 'jobs'">
                     <div class="row" id="allOffers" data-bind="foreach: { data: jobOffers, as: 'job' }">
                         <!-- Post -->
-                        <div class="blog-box col-md-6" data-toggle="modal" data-target="#m1o" data-bind="click: showModal(job)">
+                        <div class="blog-box col-md-6" data-toggle="modal" data-target="#m1o" data-bind="click: showOfferModal(job)">
                             <div class="row">
                                 <!-- Box -->
                                 <div class="media-box col-md-4">
