Finishing application, remains some bugs and minor fetures to do

--- a/rest_api/src/main/resources/static/jobs.html
+++ b/rest_api/src/main/resources/static/jobs.html
@@ -34,7 +34,7 @@
             <div class="row">
                 <div class="content col-md-6 col-sm-6" id="myOffers1">
                     <div class="row" style="margin:5px">
-                        <h2>My Offers</h2>
+                        <h2 id="offerOrProposal">My Offers</h2>
                     </div>
                     <div data-bind="foreach: { data: myOffersColumn1, as: 'job' }">
                         <!-- Post -->
