--- a/rest_api/src/main/resources/static/messageCenter.html
+++ b/rest_api/src/main/resources/static/messageCenter.html
@@ -31,7 +31,7 @@
             <div class="kiri-side col-lg-2 col-md-2 col-sm-2 col-xs-12" style="padding:0 ;height:92vh;">
                 <div class="user-head" style="height: 100px">
                     <i class="fa fa-comments"></i>
-                    <h3>Lobby</h3> <!-- style="height:30px !important" -->
+                    <h3 id="messageCenterLobby">Lobby</h3> <!-- style="height:30px !important" -->
                     <h6 id="date"></h6>
                 </div>
                 <ul class="chat-list chat-room-body" style="height:100%" data-bind="foreach: { data: contacts, as: 'contact' }" >
